index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.section {
  position: relative;
  margin: auto;
  width: 100vw;
  min-height: 100vh;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 90px;
}
.section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
  pointer-events: none;
}

.container {
  position: relative;
  z-index: 2;
  max-width: 1280px;
  height: 100%;
  padding: 0 15px;
  margin: 0;
}

.header {
  height: 44px;
}

.header__controls {
  height: 44px;
  display: flex;
  flex-wrap: wrap;
  max-width: 1260px;
}

.refresh-button {
  width: 44px;
  height: 44px;
  background-color: rgba(174, 181, 185, 0.2);
  border-radius: 6px;
  background-image: url("./img/Refresh__BG2.png");
  background-size: 35%;
  background-repeat: no-repeat;
  background-position: center;
}

.language-select {
  width: 70px;
  height: 44px;
  margin-left: 10px;
  margin-right: 10px;
}

.language-select__button {
  width: 71px;
  height: 44px;
  background-color: rgba(174, 181, 185, 0.2);
  color: white;
  font-weight: bold;
  border-radius: 6px;
  color: white;
}

.lang-ru {
  display: none;
  color: white;
  font-weight: bold;
}

.temperature-switcher {
  width: 88px;
  height: 44px;
  display: flex;
  border-radius: 6px;
}

.temperature-switcher button {
  background-color: rgba(76, 82, 85, 0.4);
  color: white;
}

.temperature-switcher button.active {
  background-color: rgba(174, 181, 185, 1);
}

.temperature-switcher__button_fahrenheit {
  width: 44px;
  height: 44px;
  background-color: rgba(76, 82, 85, 0.4);
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border-right: none;
  color: white;
  font-weight: bold;
}

.temperature-switcher__button_celsius {
  width: 44px;
  height: 44px;
  background-color: rgba(174, 181, 185, 0.7);
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  border-left: none;
  color: white;
  font-weight: bold;
}

.search-block {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 400px;
  height: 44px;
  margin-left: auto;
}

.search-block__input {
  width: 260px;
  height: 44px;
  padding: 0 10px;
  border-radius: 6px 0 0 6px;
  font-size: 16px;
  background-color: rgba(174, 181, 185, 0.2);
  color: white;
}

.search-block__input::placeholder {
  color: white;
}

.search-block__button {
  width: 90px;
  height: 44px;
  background-color: rgba(174, 181, 185, 0.4);
  border-radius: 0 6px 6px 0;
  border: none;
  color: white;
  font-weight: bold;
  cursor: pointer;
}

.search-block__button:focus {
  outline: none;
}

.main {
  margin-top: 60px;
  display: flex;
  gap: 50px;
  justify-content: space-between;
  flex-wrap: wrap;
}

.forecast-block__date {
  font-size: 24px;
  color: white;
  display: flex;
  font-family: "Montserrat", sans-serif;
  font-style: normal;
  white-space: nowrap;
}

.forecast-block__position {
  color: white;
  font-size: 40px;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.forecast-block__time {
  margin-left: 20px;
}

.weather-today {
  display: flex;
  margin-top: 60px;
}

.weather-today__image {
  width: 160px;
  height: 100px;
  mix-blend-mode: multiply;
}

.first-day_img,
.second-day_img,
.last-day_img {
  width: 65px;
  height: 40px;
}

.sunny-img {
  object-fit: contain;
  object-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.weather-today__main-temperature {
  font-size: 70px;
  color: white;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.weather-today__details {
  color: white;
  font-size: 22px;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
  white-space: nowrap;
}

.weather-future {
  display: flex;
  gap: 50px;
  justify-content: space-between;
  margin-top: 80px;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.weather-future-day__wrap {
  display: flex;
  gap: 10px;
}

.weather-future-day__name {
  color: white;
  font-size: 22px;
}

.weather-future-day__temperature {
  font-size: 40px;
  color: white;
}

.map-block {
  text-align: center;
  color: white;
}

.map-block__loading-text {
  font-size: 40px;
  margin-top: 35%;
}

.map {
  width: 350px;
  height: 300px;
  margin-top: 10px;
}

.location {
  color: white;
  text-align: end;
  margin-top: 10px;
  font-family: "Montserrat", serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

@media (max-width: 768px) {
  .container {
    flex-direction: column;
  }

  .header__controls {
    flex-direction: column;
  }

  .main {
    align-items: center;
    justify-content: center;
  }

  .forecast-block__position {
    text-align: center;
  }

  .forecast-block__date {
    text-align: center;
    justify-content: center;
    margin-top: 25px;
  }
}

